# lab_3_fast_api

./: compose.yaml  main.py  pyproject.toml  requirements.txt
api/: directorApi.py  infoApi.py  moviesApi.py  userAdditionalInfo.py  userAdditionalInfoApi.py  users.py  usersApi.py
config/: config.py
data_base/: data_base.py
models/: generalModels.py  movies.py  moviesModels.py  userModels.py
